Fix display issues on mobile for selected

--- a/styles.less
+++ b/styles.less
@@ -89,7 +89,11 @@ svg#logo > * {
   overflow: hidden;
 
   .bis-art {
-    max-width: 60vmin;
+
+
+    figcaption {
+      font-size: 0.8rem;
+    }
   }
 
   &:after {
